--- a/new1.html
+++ b/new1.html
@@ -3,15 +3,15 @@
   <meta charset="UTF-8">
 </head>
 <div class="row">
-    <form class="col s12 m6 l3">
-      <div class="row">
+    <form class="col s12">
+      <div class="container">
 	    <div class="col s12" align = "center"><h2>Dịch nhanh</h2></div>
-        <div class="input-field col s12 m6 l3">
+        <div class="input-field col s12 m6">
           <textarea id="in_text" class="materialize-textarea" onkeyup="translateToHT()" onclick = "SelectText(this);">Nhập vào đây</textarea>
           <label for="in_text">Hà Nội</label>
 		  <a class="btn-floating pulse" onclick = Copy1()>Copy</a>
         </div>
-		<div class="input-field col s12 m6 l3">
+		<div class="input-field col s12 m6">
           <textarea id="out_text" class="materialize-textarea" onkeyup="translateToHN()" onclick = "SelectText(this);">Nhập vào đây</textarea>
           <label for="out_text">Nghệ Tĩnh</label>
 		  <a class="btn-floating pulse" onclick = Copy2()>Copy</a>
