--- a/new2.html
+++ b/new2.html
@@ -6,7 +6,7 @@
 <div class="row" id = "firework">
     <form class="col s12">
       <div class="container">
-	    <div class="caption center-align"><h2>Dịch nhanh</h2></div>
+	    <div class="caption center-align"><h2>Dịch nhanh tiếng Nghệ Tĩnh</h2></div>
         <div class="input-field col s12 m6">
           <textarea id="in_text" class="materialize-textarea" onkeyup="translateToHT()" onclick = "this.select();">Nhập vào đây</textarea>
           <label for="in_text">Hà Nội</label>
