--- a/new2.html
+++ b/new2.html
@@ -1,5 +1,7 @@
 <html>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <head>
+  <title>Dịch nhanh</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
