--- a/new2.html
+++ b/new2.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<div id = "firework" style="height:200px;"></div>
+
 <div class="row">
-    <form class="col s12">
       <div class="container">
 	    <div class="caption center-align"><h2>Dịch nhanh</h2></div>
         <div class="input-field col s12 m6">
@@ -21,8 +20,8 @@
 		  <a class="waves-effect waves-light btn-small" onclick = Copy2()>Copy</a>
         </div>
       </div>
-    </form>
 </div>
+
 
 
 <style>
@@ -166,7 +165,9 @@ document.execCommand("copy");
 }
 </script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<style>
 
+</style>
 <script src="sketch.js"></script>
 <script>
         function Particle( x, y, radius ) {
@@ -300,7 +301,7 @@ document.execCommand("copy");
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<div>
+<div id = "firework"style="height:50px;">
 <blockquote>
       Tác giả: <a href="https://www.instagram.com/dr_thinh">dr_thinh</a> <br/> 
       Chương trình viết dựa trên tham khảo từ bài viết theo <a href="https://www.facebook.com/notes/ph%E1%BA%A1m-hi%E1%BA%BFu/h%E1%BB%8Dc-ti%E1%BA%BFng-h%C3%A0-t%C4%A9nh-c%E1%BA%A5p-t%E1%BB%91c-%C4%91%C3%A2y/138398066247033/">link</a>. 
