--- a/new2.html
+++ b/new2.html
@@ -1,28 +1,26 @@
 <html>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <head>
-  <title>Dịch nhanh</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  <title>Dịch nhanh tiếng Nghệ Tĩnh</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <div class="row">
       <div class="container">
-	    <div class="caption center-align"><h2>Dịch nhanh</h2></div>
-        <div class="input-field col s12 m6">
+	<div class="caption center-align"><h2>Dịch nhanh tiếng Nghệ Tĩnh</h2></div>
+          <div class="input-field col s12 m6">
           <textarea id="in_text" class="materialize-textarea" onkeyup="translateToHT()" onclick = "this.select();">Nhập vào đây</textarea>
           <label for="in_text">Hà Nội</label>
 		  <a class="waves-effect waves-light btn-small" onclick = Copy1()>Copy</a>
         </div>
-		<div class="input-field col s12 m6">
+	<div class="input-field col s12 m6">
           <textarea id="out_text" class="materialize-textarea" onkeyup="translateToHN()" onclick = "this.select();">Nhập vào đây</textarea>
           <label for="out_text">Nghệ Tĩnh</label>
 		  <a class="waves-effect waves-light btn-small" onclick = Copy2()>Copy</a>
         </div>
       </div>
 </div>
-
-
 
 <style>
 html {
@@ -169,6 +167,7 @@ document.execCommand("copy");
 <blockquote>
       Tác giả: dr_thinh 
       <br/> 
-      Chương trình viết dựa trên tham khảo từ bài viết theo <a href="https://www.facebook.com/notes/ph%E1%BA%A1m-hi%E1%BA%BFu/h%E1%BB%8Dc-ti%E1%BA%BFng-h%C3%A0-t%C4%A9nh-c%E1%BA%A5p-t%E1%BB%91c-%C4%91%C3%A2y/138398066247033/">link</a>.
+      Chương trình viết dựa trên tham khảo từ bài viết theo <a href="https://www.facebook.com/notes/ph%E1%BA%A1m-hi%E1%BA%BFu/h%E1%BB%8Dc-ti%E1%BA%BFng-h%C3%A0-t%C4%A9nh-c%E1%BA%A5p-t%E1%BB%91c-%C4%91%C3%A2y/138398066247033/">link</a>, xuất phát từ mong muốn <br/>
+      hiểu và gần gũi hơn đất và người Nghệ Tĩnh, chương trình còn khá thô sơ, nhưng sẽ được cải tiến dần :)
 </blockquote>
 </html>
