--- a/new2.html
+++ b/new2.html
@@ -167,7 +167,7 @@ document.execCommand("copy");
 <blockquote>
       Tác giả: dr_thinh 
       <br/> 
-      Chương trình viết dựa trên tham khảo từ bài viết theo <a href="https://www.facebook.com/notes/ph%E1%BA%A1m-hi%E1%BA%BFu/h%E1%BB%8Dc-ti%E1%BA%BFng-h%C3%A0-t%C4%A9nh-c%E1%BA%A5p-t%E1%BB%91c-%C4%91%C3%A2y/138398066247033/">link</a>, xuất phát từ mong muốn <br/>
-      hiểu và gần gũi hơn đất và người Nghệ Tĩnh, chương trình còn khá thô sơ, nhưng sẽ được cải tiến dần :)
+      Chương trình viết dựa trên tham khảo từ bài viết theo <a href="https://www.facebook.com/notes/ph%E1%BA%A1m-hi%E1%BA%BFu/h%E1%BB%8Dc-ti%E1%BA%BFng-h%C3%A0-t%C4%A9nh-c%E1%BA%A5p-t%E1%BB%91c-%C4%91%C3%A2y/138398066247033/">link</a>, xuất phát từ mong muốn 
+      hiểu và gần gũi hơn đất và người Nghệ Tĩnh. Hiện chương trình còn khá thô sơ, nhưng sẽ được cải tiến dần :)
 </blockquote>
 </html>
