--- a/new2.html
+++ b/new2.html
@@ -165,9 +165,9 @@ document.execCommand("copy");
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <blockquote>
-      Tác giả: dr_thinh 
-      <br/> 
+      Tác giả: dr_thinh <br/> 
       Chương trình viết dựa trên tham khảo từ bài viết theo <a href="https://www.facebook.com/notes/ph%E1%BA%A1m-hi%E1%BA%BFu/h%E1%BB%8Dc-ti%E1%BA%BFng-h%C3%A0-t%C4%A9nh-c%E1%BA%A5p-t%E1%BB%91c-%C4%91%C3%A2y/138398066247033/">link</a>, xuất phát từ mong muốn 
-      hiểu và gần gũi hơn đất và người Nghệ Tĩnh. Hiện chương trình còn khá thô sơ, nhưng sẽ được cải tiến dần :)
+      hiểu, gần gũi hơn đất và người Nghệ Tĩnh. 
+     <br/> Hiện chương trình còn khá thô sơ, nhưng sẽ được cải tiến dần :)
 </blockquote>
 </html>
