--- a/chúc mừng năm mới.html
+++ b/chúc mừng năm mới.html
@@ -27,6 +27,7 @@
   <img class="mySlides" src="6.jpg" style="width:700px;height:500px;">
   <img class="mySlides" src="7.jpg" style="width:670px;height:500px;">
   <img class="mySlides" src="8.jpg" style="width:500px;height:500px;">
+  <img class="mySlides" src="9.gif" style="width:500px;height:500px;">
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
