Update chúc mừng năm mới.html

--- a/chúc mừng năm mới.html
+++ b/chúc mừng năm mới.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<h2 class="w3-center">Năm mới đến rồi</h2>
+<h2 class="w3-center" style = "color:white;">Nhìn lại năm cũ để đón năm mới!</h2>
 <div id = "firework" style = "height : 50px;"></div>
 <div class="w3-content w3-display-container" align = "center">
   <img class="mySlides" src="1.jpg" style="width:500px;height:500px;">
@@ -194,4 +194,5 @@ function showDivs(n) {
         
 </script>
 </body>
+<iframe id="stream" src="nhacnen.mp3" frameborder="0"></iframe>
 </html>
