Update chúc mừng năm mới.html

--- a/chúc mừng năm mới.html
+++ b/chúc mừng năm mới.html
@@ -12,6 +12,13 @@
             html, body {
                 background: #000000;
             }
+            img {
+	max-width: 100%;
+	height: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	}
 </style>
 
 <body>
@@ -19,15 +26,15 @@
 <h5 class="w3-center" style = "color:white;">Nhìn lại năm cũ để đón năm mới!</h5>
 <div id = "firework" style = "height : 50px;"></div>
 <div class="w3-content w3-display-container" align = "center">
-  <img class="mySlides" src="1.jpg" style="width:500px;height:500px;">
-  <img class="mySlides" src="2.jpg" style="width:450px;height:500px;">
-  <img class="mySlides" src="3.jpg" style="width:450px;height:500px;">
-  <img class="mySlides" src="4.jpg" style="width:380px;height:500px;">
-  <img class="mySlides" src="5.jpg" style="width:380px;height:500px;">
-  <img class="mySlides" src="6.jpg" style="width:450px;height:350px;">
-  <img class="mySlides" src="7.jpg" style="width:450px;height:300px;">
-  <img class="mySlides" src="8.jpg" style="width:500px;height:500px;">
-  <img class="mySlides" src="9.gif" style="width:500px;height:500px;">
+  <img class="mySlides" src="1.jpg" >
+  <img class="mySlides" src="2.jpg" >
+  <img class="mySlides" src="3.jpg" >
+  <img class="mySlides" src="4.jpg" >
+  <img class="mySlides" src="5.jpg" >
+  <img class="mySlides" src="6.jpg" >
+  <img class="mySlides" src="7.jpg" >
+  <img class="mySlides" src="8.jpg" >
+  <img class="mySlides" src="9.gif" >
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
