--- a/chúc mừng năm mới.html
+++ b/chúc mừng năm mới.html
@@ -33,8 +33,8 @@
 </head>
 <body>
   <!-- Swiper -->
-<h5 style="color:white;">Nhìn lại năm cũ để hướng đến năm mới :)</h5>
   <div class="swiper-container">
+    <h5 style="color:white; align:center;">Nhìn lại năm cũ để hướng đến năm mới :)</h5>
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="swiper-zoom-container">
