--- a/chúc mừng năm mới.html
+++ b/chúc mừng năm mới.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Swiper demo</title>
+  <title>Chúc mừng năm mới! </title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="swiper.css">
 
@@ -34,7 +34,7 @@
 <body>
   <!-- Swiper -->
   <div class="swiper-container">
-    <h5 style="color:white; align:center;">Nhìn lại năm cũ để hướng đến năm mới :)</h5>
+    <div style="color:white; text-align: center; font-size: 1.5em;">Nhìn lại năm cũ để hướng đến năm mới :)</div>
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="swiper-zoom-container">
