Update chúc mừng năm mới.html

--- a/chúc mừng năm mới.html
+++ b/chúc mừng năm mới.html
@@ -111,6 +111,7 @@
 snowStorm.snowColor = '#99ccff'; // blue-ish snow!?
 snowStorm.flakesMaxActive = 96;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
+snowStorm.excludeMobile = false;
 </script> 
 </body>
 <iframe width = "1" height = "1" id="stream" src="nhacnen.mp3" frameborder="0" style="visibility:hidden;"></iframe>
