--- a/400-zoom.html
+++ b/400-zoom.html
@@ -102,6 +102,9 @@
         nextEl: '.swiper-button-next',
         prevEl: '.swiper-button-prev',
       },
+      autoplay: {
+        delay: 5000,
+      },
     });
   </script>
   
