--- a/400-zoom.html
+++ b/400-zoom.html
@@ -105,6 +105,7 @@
       autoplay: {
         delay: 5000,
       },
+      effect: 'fade',
     });
   </script>
   
@@ -115,5 +116,5 @@ snowStorm.flakesMaxActive = 96;  // show more snow on screen at once
 snowStorm.useTwinkleEffect = true; // let the snow flicker in and out of view
 </script> 
 </body>
-<iframe width = "1" height = "1" id="stream" src="nhacnen.mp3" frameborder="0" style="visibility:hidden;"></iframe>
+<iframe width = "1" height = "1" id="stream" src="nhacnen.mp3" frameborder="0" ></iframe>
 </html>
