--- a/400-zoom.html
+++ b/400-zoom.html
@@ -95,6 +95,7 @@
   <script>
     var swiper = new Swiper('.swiper-container', {
       zoom: true,
+      effect: 'coverflow',
       pagination: {
         el: '.swiper-pagination',
       },
@@ -104,8 +105,7 @@
       },
       autoplay: {
         delay: 5000,
-      },
-      effect: 'fade',
+      }
     });
   </script>
   
