--- a/400-zoom.html
+++ b/400-zoom.html
@@ -95,7 +95,7 @@
   <script>
     var swiper = new Swiper('.swiper-container', {
       zoom: true,
-      effect: 'coverflow',
+      effect: 'cube',
       pagination: {
         el: '.swiper-pagination',
       },
