--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     .swiper-slide {
       overflow: hidden;
     }
+    p {
+      align: center;
+    }
   </style>
 </head>
 <body>
@@ -43,6 +46,31 @@
       <div class="swiper-slide">
         <div class="swiper-zoom-container">
           <img src="songimages/song2.jpg">
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="swiper-zoom-container">
+          <blockquote>
+          <p>Inochi no Riyuu (Lý do của sự sống) - Masashi Sada</p>
+          <p>"Lý do tôi được sinh ra trong cuộc sống này là để gặp bố mẹ tôi</p>
+          <p>Lý do tôi được sinh ra trong cuộc sống này là để gặp anh chị em tôi</p>
+          <p>Lý do tôi được sinh ra trong cuộc sống này là để gặp bạn bè tôi</p>
+          <p>Và lý do tôi được sinh ra trong cuộc đời này là để gặp bạn đấy - người tôi yêu.</p>
+          <p>Để mùa xuân đến và những bông hoa sẽ nở</p>
+          <p>Để mua thu đến và lá đỏ sẽ rơi</p>
+          <p>Bất kỳ ai sinh ra trong cuộc đời này cũng đều để được hạnh phúc</p>
+          <p>Những nỗi đau buồn rồi sẽ qua, sau đó thì niềm vui và những điều thực sự ý nghĩa sẽ đến</p>
+          <p>Lý do tôi được sinh ra trong cuộc đời này là vì tôi đã làm tổn thương ai đó</p>
+          <p>Lý do tôi được sinh ra trong cuộc đời này là để ai đó tổn thương tôi</p>
+          <p>Lý do tôi được sinh ra trong cuộc đời này là để được ai đó cứu giúp</p>
+          <p>Lý do tôi được sinh ra trong cuộc đời này là để giúp đỡ ai đó</p>
+          <p>Khi màn đêm sẽ buông xuống, bóng tối trong tôi tràn ngập</p>
+          <p>Nhưng khi bình minh lên, mặt trời trong tôi sẽ tỏa sáng</p>
+          <p>Bất kỳ ai sinh ra trong cuộc đời này cũng đều để được hạnh phúc</p>
+          <p>Những nỗi đau buồn rồi sẽ trôi ra biển lớn, và niềm vui sẽ ngập tràn</p>
+          <p>Lý do tôi được sinh ra trong cuộc đời này là để gặp bạn đấy - người tôi yêu.</p>
+          <p>Lý do tôi được sinh ra trong cuộc đời này là để bảo vệ bạn đấy - người tôi yêu</p>
+          </blockquote>
         </div>
       </div>
     </div>
@@ -69,7 +97,7 @@
         prevEl: '.swiper-button-prev',
       },
       autoplay: {
-        delay: 7000,
+        delay: 15000,
         stopOnLastSlide: true
       }
     });
