--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="swiper-slide">
-        <div class="swiper-zoom-container">
+        <div class="swiper-container-autoheight">
           <blockquote>
           <p>Inochi no Riyuu (Lý do của sự sống) - Masashi Sada</p>
           <p>"Lý do tôi được sinh ra trong cuộc sống này là để gặp bố mẹ tôi</p>
