--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     body {
       background: #000;
       font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-      font-size: 13px;
+      font-size: 14px;
+      font-color: white;
       color:#000;
       margin: 0;
       padding: 0;
@@ -29,9 +30,8 @@
     .swiper-slide {
       overflow: hidden;
     }
-    p {
-      color: white;
-      align: center;
+    blockquote {
+      text-align: center;
     }
   </style>
 </head>
@@ -50,26 +50,28 @@
         </div>
       </div>
       <div class="swiper-slide">
-        <div class="swiper-container-autoheight">
-          <p>Inochi no Riyuu (Lý do của sự sống) - Masashi Sada</p>
-          <p>"Lý do tôi được sinh ra trong cuộc sống này là để gặp bố mẹ tôi</p>
-          <p>Lý do tôi được sinh ra trong cuộc sống này là để gặp anh chị em tôi</p>
-          <p>Lý do tôi được sinh ra trong cuộc sống này là để gặp bạn bè tôi</p>
-          <p>Và lý do tôi được sinh ra trong cuộc đời này là để gặp bạn đấy - người tôi yêu.</p>
-          <p>Để mùa xuân đến và những bông hoa sẽ nở</p>
-          <p>Để mua thu đến và lá đỏ sẽ rơi</p>
-          <p>Bất kỳ ai sinh ra trong cuộc đời này cũng đều để được hạnh phúc</p>
-          <p>Những nỗi đau buồn rồi sẽ qua, sau đó thì niềm vui và những điều thực sự ý nghĩa sẽ đến</p>
-          <p>Lý do tôi được sinh ra trong cuộc đời này là vì tôi đã làm tổn thương ai đó</p>
-          <p>Lý do tôi được sinh ra trong cuộc đời này là để ai đó tổn thương tôi</p>
-          <p>Lý do tôi được sinh ra trong cuộc đời này là để được ai đó cứu giúp</p>
-          <p>Lý do tôi được sinh ra trong cuộc đời này là để giúp đỡ ai đó</p>
-          <p>Khi màn đêm sẽ buông xuống, bóng tối trong tôi tràn ngập</p>
-          <p>Nhưng khi bình minh lên, mặt trời trong tôi sẽ tỏa sáng</p>
-          <p>Bất kỳ ai sinh ra trong cuộc đời này cũng đều để được hạnh phúc</p>
-          <p>Những nỗi đau buồn rồi sẽ trôi ra biển lớn, và niềm vui sẽ ngập tràn</p>
-          <p>Lý do tôi được sinh ra trong cuộc đời này là để gặp bạn đấy - người tôi yêu.</p>
-          <p>Lý do tôi được sinh ra trong cuộc đời này là để bảo vệ bạn đấy - người tôi yêu</p>
+        <div class="swiper-scrollbar-drag">
+          <blockquote>
+          Inochi no Riyuu (Lý do của sự sống) - Masashi Sada<br/>
+          Lý do tôi được sinh ra trong cuộc sống này là để gặp bố mẹ tôi<br/>
+          Lý do tôi được sinh ra trong cuộc sống này là để gặp anh chị em tôi<br/>
+          Lý do tôi được sinh ra trong cuộc sống này là để gặp bạn bè tôi<br/>
+          Và lý do tôi được sinh ra trong cuộc đời này là để gặp bạn đấy - người tôi yêu.<br/>
+          Để mùa xuân đến và những bông hoa sẽ nở<br/>
+          Để mua thu đến và lá đỏ sẽ rơi<br/>
+          Bất kỳ ai sinh ra trong cuộc đời này cũng đều để được hạnh phúc<br/>
+          Những nỗi đau buồn rồi sẽ qua, sau đó thì niềm vui và những điều thực sự ý nghĩa sẽ đến<br/>
+          Lý do tôi được sinh ra trong cuộc đời này là vì tôi đã làm tổn thương ai đó <br/>
+          Lý do tôi được sinh ra trong cuộc đời này là để ai đó tổn thương tôi<br/>
+          Lý do tôi được sinh ra trong cuộc đời này là để được ai đó cứu giúp<br/>
+          Lý do tôi được sinh ra trong cuộc đời này là để giúp đỡ ai đó<br/>
+          Khi màn đêm sẽ buông xuống, bóng tối trong tôi tràn ngập<br/>
+          Nhưng khi bình minh lên, mặt trời trong tôi sẽ tỏa sáng<br/>
+          Bất kỳ ai sinh ra trong cuộc đời này cũng đều để được hạnh phúc<br/>
+          Những nỗi đau buồn rồi sẽ trôi ra biển lớn, và niềm vui sẽ ngập tràn<br/>
+          Lý do tôi được sinh ra trong cuộc đời này là để gặp bạn đấy - người tôi yêu.<br/>
+          Lý do tôi được sinh ra trong cuộc đời này là để bảo vệ bạn đấy - người tôi yêu<br/>
+          </blockquote>
         </div>
       </div>
     </div>
