--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       background: #000;
       font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
       font-size: 14px;
-      font-color: white;
       color:#000;
       margin: 0;
       padding: 0;
@@ -32,6 +31,7 @@
     }
     blockquote {
       text-align: center;
+      color: white;
     }
   </style>
 </head>
