--- a/iol.html
+++ b/iol.html
@@ -191,8 +191,8 @@ function FillConstants(){
 		WriteIOLtips(HeaderText + " \r -one piece Acrylic \r -use Platinum Inserter \r -will go thru 2.4mm wound \r -ZCB00 is platform IOL \r -need backup IOL for sulcus");
 		}
 	else if(TheIOL == 18){// Micropure 123
-		WriteConstants(119.4, 1.8, 5.59, 1.214 , 0.4, 0.1);		
-		IOLtipsDisappear();
+		WriteConstants(118.5, 1.8, 5.59, 1.214 , 0.4, 0.1);		
+		WriteIOLtips(HeaderText + " \r Thông số của nhà sản xuất là A = 118.5 với siêu âm nhúng \r tham khảo của phẫu thuật viên là A = 119.05");
 		}
 	else if(TheIOL == 19){// HOYA PY-60AD
 		WriteConstants(118.6, 1.54, 5.30, -0.093 , -0.023, 0.208);		
