--- a/iol.html
+++ b/iol.html
@@ -1410,7 +1410,7 @@ function CalcMyAge(){
 	var isAndroid = ua.indexOf("android") > -1; //&& ua.indexOf("mobile");
 	if(isAndroid) {
 	if(confirm('Bạn có muốn tải phiên bản Android về điện thoại?') == true)
-        window.location = 'https://github.com/drthinh/drthinh.github.io/blob/master/iol-calc-drthinh.apk';
+        window.location = 'https://drive.google.com/open?id=1JTHfftgL8BHHF8sPWOSKzOJLKPn9L6Qf';
 }
 	</script>
 </body></html>
