--- a/chess.html
+++ b/chess.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
  	<head>
-		<script src="http://lab.subinsb.com/projects/jquery/core/jquery-2.1.1.js"></script>
-		<script src="http://lab.subinsb.com/projects/jquery/chess/jquery.chess.min.js"></script>
+		<script src="jquery-2.1.1.js"></script>
+		<script src="jquery.chess.min.js"></script>
  	</head>
  	<body>
 		<div id="content">
