--- a/test1/realtime.html
+++ b/test1/realtime.html
@@ -18,5 +18,6 @@
   	function setTotal(a){
   		document.getElementById('total').value = a.toString();
   	}
+    Hello('toi la thinh');
   </script>
 </html>
