--- a/test1/realtime.html
+++ b/test1/realtime.html
@@ -18,6 +18,6 @@
   	function setTotal(a){
   		document.getElementById('total').value = a.toString();
   	}
-    Hello('toi la thinh');
+    Print.postMessage('Hello World being called from Javascript code');
   </script>
 </html>
