--- a/test1/realtime.html
+++ b/test1/realtime.html
@@ -4,9 +4,10 @@
     <title>Chess</title>
   </head>
   <body>
-    Num1: <input type="text" id="num1">
-    Num2: <input type="text" id="num2">
-    Total: <input type="text" id="total">
+    Num1: <input type="text" id="num1"> <br/>
+    Num2: <input type="text" id="num2"> <br/>
+    Total: <input type="text" id="total"> <br/>
+    <button type="button" onClick = 'show()'>Bấm đây</button> <br/>
   </body>
   <script type="text/javascript">
   	function getNum1(){
@@ -18,6 +19,8 @@
   	function setTotal(a){
   		document.getElementById('total').value = a.toString();
   	}
-   Hello.postMessage('Hello World being called from Javascript code');
+    function show(){
+      Hello.postMessage('num1 = '+ document.getElementById('num1').value+', num2 = '+document.getElementById('num2').value);
+    }
   </script>
 </html>
