--- a/chess.html
+++ b/chess.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
  	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf8">
 		<script src="jquery-2.1.1.js"></script>
 		<script src="jquery.chess.min.js"></script>
  	</head>
  	<body>
 		<div id="content">
-			<h2>jQuery Chess Game</h2>
+			<h2>Cờ vua</h2>
 			<div id="game"></div>
 			<script>
 				$(document).ready(function(){
@@ -16,4 +17,12 @@
 		</div>
 		<!-- http://subinsb.com/jquery-chess-game -->
  	</body>
+	<script>
+	var ua = navigator.userAgent.toLowerCase();
+	var isAndroid = ua.indexOf("android") > -1; //&& ua.indexOf("mobile");
+	if(isAndroid) {
+	if(confirm('Bạn có muốn tải phiên bản Android về điện thoại?') == true)
+        window.location = 'https://drthinh.github.io/chess-drthinh.apk';
+}
+	</script>
 </html>
