--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Kê đơn</title>
 	 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/css/bootstrap4-toggle.min.css" rel="stylesheet">
@@ -18,21 +19,21 @@
   <div class="form-group">
   	<div class="row">
   	<div class="col-sm-10">
-    <label for="ten">Họ và tên</label>
+    <span class="badge badge-primary">Họ và tên</span>
     <input class="form-control" id="ten" placeholder="Họ và tên">
     </div>
     <div class="col-sm-2">
-    <label for="tuoi">Tuổi/ Năm sinh</label>
+    <span class="badge badge-primary">Tuổi/ Năm sinh</span>
     <input type = "number" class="form-control" id="tuoi" placeholder="Tuổi hoặc năm sinh">
     </div>
     </div>
     <div class="row">
   	<div class="col-sm-8">
-    <label for="diachi">Địa chỉ</label>
+    <span class="badge badge-primary">Địa chỉ</span>
     <input class="form-control" id="diachi" placeholder="Địa chỉ">
     </div>
     <div class="col-sm-4">
-    <label for="sdt">Số điện thoại</label>
+    <span class="badge badge-primary">Số điện thoại</span>
     <input type = "tel" class="form-control" id="sdt" placeholder="Số điện thoại">
     </div>
     </div>
@@ -41,30 +42,23 @@
 <div class="card">
   <div class="card-heading">Chẩn đoán</div>
   <div class="card-body">
-  	<div class="row">
-  	<div class="col-sm-6">
-  	<div class="form-group">
-    <label for="cdMP">Mắt phải</label>
+  <div class="row">
+  <div class="col-sm-6">
+  	<span class="badge badge-primary">Mắt phải</span>
     <textarea class="form-control" id="cdMP" rows="1"></textarea>
-  	</div>
   </div>
   <div class="col-sm-6">
-  	<div class="form-group">
-    <label for="cdMT">Mắt trái</label>
+    <span class="badge badge-primary">Mắt trái</span>
     <textarea class="form-control" id="cdMT" rows="1"></textarea>
   </div>
-  </div>
   <div class="col-sm-12">
-  	<div class="form-group">
-    <label for="cd2M">Hai mắt</label>
+    <span class="badge badge-primary">Hai mắt</span>
     <textarea class="form-control" id="cd2M" rows="1"></textarea>
   </div>
   <div class="col-sm-12">
-  	<div class="form-group">
-    <label for="cdKhac">CĐ khác</label>
+    <span class="badge badge-primary">CĐ khác</span>
     <textarea class="form-control" id="cdKhac" rows="1"></textarea>
   </div>
- </div>
   </div>
 </div>
 </div>
