--- a/index.html
+++ b/index.html
@@ -85,62 +85,82 @@
   <div class="row no-gutters">
     <div class="col-8">
     <span class="badge badge-primary">Tên biệt dược</span>
-    <textarea class="form-control" id="cdMP" rows="1"></textarea>
+    <input type = "text" class="form-control" id="tenthuoc" placeholder="">
   	</div>
     <div class="col-2">
     <span class="badge badge-primary">Số lượng</span>
-    <textarea class="form-control" id="cdMT" rows="1"></textarea>
-    <div>đơn vị</div>
+    <input type = "number" class="form-control" id="soluong" placeholder="">
+    <div id = "donvi">đơn vị</div>
     </div>
     <div class="col-2">
     <span class="badge badge-primary">Trong kho</span>
-    <textarea class="form-control" id="cdMT" rows="1"></textarea>
-    <div>đơn vị</div>
+    <textarea class="form-control" id="tonkho" rows="1" readonly></textarea>
+    <div id = "donvi2">đơn vị</div>
     </div>
   </div>
   <div class="row no-gutters">
     <div class="col-2">
     <span class="badge badge-primary">Cách dùng</span>
-   	<select class="form-control">
+   	<select class="form-control" id = "cachdung">
    		<option>Tra</option>
    		<option>Bôi</option>
    		<option>Uống</option>
+   		<option></option>
    	</select>
     </div>
     <div class="col-3">
     <span class="badge badge-primary">Số lần dùng</span>
-    <textarea class="form-control" id="cdMT" rows="1"></textarea>
+    <input type = "number" class="form-control" id="solandung" placeholder="">
     </div>
     <div class="col-3">
     <span class="badge badge-primary">Mỗi lần</span>
-    <textarea class="form-control" id="cdMT" rows="1"></textarea>
+    <input type = "number" class="form-control" id="moilandung" placeholder="">
     </div>
     <div class="col-2">
     <span class="badge badge-primary">Vị trí</span>
-    <select class="form-control">
+    <select class="form-control" id = "vitri">
    		<option>MP</option>
    		<option>MT</option>
    		<option>2M</option>
    		<option>vùng da tổn thương</option>
+   		<option></option>
    	</select>
     </div>
    	<div class="col-2">
     <span class="badge badge-primary">Thời điểm</span>
-    <textarea class="form-control" id="cdMT" rows="1"></textarea>
+    <select class="form-control" id = "thoidiem">
+   		<option>Trong ngày</option>
+   		<option>Sau ăn</option>
+   		<option>Sau ăn sáng</option>
+   		<option>Trước khi ngủ</option>
+   		<option></option>
+   	</select>
     </div>
     </div>
 
     <div class="row no-gutters">
     <div class="col-6">
     <span class="badge badge-primary">Lưu ý</span>
-    <textarea class="form-control" id="cdMT" rows="1"></textarea>
+    <textarea class="form-control" id="luuy" rows="1"></textarea>
     </div>
     <div class="col-2">
-    <span class="badge badge-primary">Kết thúc khám</span>
-    <textarea class="form-control" id="cdMT" rows="1"></textarea>
+    <span class="badge badge-primary">Tùy chọn</span>
+    <button class="btn btn-primary mb-2" id="btnThem">Thêm</button>
     </div>
     </div> 
+<div class="card">
+	<div class="card-heading">
+		Đơn thuốc
+	</div>
+	<div class="card-body" id = "khungdonthuoc">
 
+	  <ol id = "donthuoc">
+  		
+	  </ol>
+		
+	</div>
+	
+</div>
    
     </div>
   </div>
@@ -150,7 +170,77 @@
 
 </body>
 <script type="text/javascript">
-	
+	var DONTHUOC = [], DONTHUOC2 = [];
+	String.prototype.format = function() {
+    var s = this;
+    for (var i = 0; i < arguments.length; i++) {       
+        var reg = new RegExp("\\{" + i + "\\}", "gm");             
+        s = s.replace(reg, arguments[i]);
+    }
+    return s;
+}
+    $(".clickMe").click(function(){
+    	$(this).text($(this).text() + "<br/>clicked")
+    	console.log($(this).html())
+    	console.log($(this).text())
+    });
+    $("#btnThem").click(function(){
+    	var strThem = TaoDongThuoc(
+    			$("#tenthuoc").val(),
+    			$("#soluong").val(),
+    			$("#cachdung option:selected").html(),
+    			$("#vitri option:selected").html(),
+    			$("#solandung").val(),
+    			$("#moilandung").val(),
+    			//$("#donvi").text(),
+    			"giọt",
+    			$("#thoidiem option:selected").html(),
+    			$("#luuy").val()
+    		)
+    	$("#donthuoc").append("<li class = 'clickMe' "+strThem+" </li>");
+        
+    })
+	function TaoDongThuoc(
+		tenthuoc, 
+		soluong,
+		cachdung,
+		vitri,
+		solandung,
+		moilandung,
+		donvi,
+		thoidiem,
+		luuy
+		){
+	var s, s2;
+	if (luuy!="") luuy = "<br/>Lưu ý: "+ luuy;
+	s = "{0} x {1} {2} <br/>{3} {4}: {5} lần, mỗi lần {6} {7} {8}{9}".format(
+		tenthuoc, 
+		"lọ",
+		soluong,
+		cachdung,
+		vitri,
+		solandung,
+		moilandung,
+		donvi,
+		thoidiem,
+		luuy
+		)
+	s2 = "[{0}] x [{1}] [{2}] \n[{3}] [{4}]: [{5}] lần, mỗi lần [{6}] [{7}] [{8}]\n[{9}]".format(
+		tenthuoc, 
+		soluong,
+		cachdung,
+		vitri,
+		solandung,
+		moilandung,
+		donvi,
+		thoidiem,
+		luuy
+		)
+	DONTHUOC2.push(s2)
+	return s;
+	}
+
+
 </script>
 
 </html>
