--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
         		PHÒNG KHÁM MẮT
         	</td>
             <td style="border: none;">
-            	 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	 
+            	
             </td>
             <td style="border: none;">
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            
             </td>
             <td style="border: none;">
             	QR code: 
@@ -210,13 +210,13 @@
         </tr>
             <tr style="border: none;">
         	<td style="border: none; text-align: center;"> 
-        	 BS THẮM 		
+        	 TÚ MINH 		
         	</td>
             <td style="border: none;">
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
             </td>
             <td style="border: none;">
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </td>
             <td style="border: none;">	
             	Mã BN: 
@@ -266,17 +266,16 @@
         </tr>
     </table>    
 
-    <h4>Chẩn đoán: 2M: Viêm màng bồ đào</h4>
+    <b>Chẩn đoán: 2M: Viêm màng bồ đào</b>
     <ol>
-  		<li>Paracetamol 150mg x 20 viên<br/>Uống 2 lần/ ngày</li>
- 		  <li>Paracetamol 150mg x 20 viên</li>
-  		<li>Paracetamol 150mg x 20 viên</li>
-  		<li>Paracetamol 150mg x 20 viên<br/>Uống 2 lần/ ngày</li>
-	  </ol>
+                <li>Medrol 16mg x 20 viên<br/>Uống 2 lần/ngày, mỗi lần 1 viên sau ăn</li>
+ 		<li>Vigamox x 01 lọ<br/>Nhỏ 2M: 4 lần/ngày, mỗi lần 1 giọt</li>
+  		<li>Maxitrol x 01 lọ<br/>Nhỏ 2M: 4 lần/ngày, mỗi lần 1 giọt</li>		
+    </ol>
 	<p>Ghi chú: Khám lại sau 05 ngày</p>
 	<p style="text-align: right;">Hà Nội, ngày 21/7/2019&nbsp;&nbsp;&nbsp;</p>
 	<p style="text-align: right;">Bác sỹ khám bệnh&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-	<br/><br/><br/>
+	<br/><br/>
 	<p style="text-align: right;">Ths.BS Ngô Thị Hồng Thắm</p>
   </section>
 
