--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <table style="border-collapse: collapse; border: none;">
         <tr style="border: none;">
         	<td style="border: none;">
-        		PHÒNG KHÁM MẮT
+        		PK MẮT
         	</td>
             <td style="border: none;">
             	
